# c_ort

./: .gitmodules  CMakeLists.txt  README.md  deps.gradle  init-deps.sh  run-ort.sh
.ort/: config.yml  deps.ortproject.yml
include/: FreeRTOSConfig.h
src/: main.c
